--- a/.github/workflows/ch2_challenge.yml
+++ b/.github/workflows/ch2_challenge.yml
@@ -1,28 +1,33 @@
 name: Python Workflow for Sum Frequencies Application
 on:
   workflow_dispatch:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build:
-    #----------------------------------------------#
-    # Add your matrix strategy configuration here  #
-    #----------------------------------------------#
-    runs-on: ubuntu-latest
+    strategy: 
+      fail-fast: false
+      matrix:
+        version: ["3.7", "3.8", "3.9", "3.10"]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+          - platform: ubuntu-latest
+            version: 3.6
+        exclude:
+          - platform: windows-latest
+            version: 3.10
+
+    runs-on: ${{ matrix.platform }}
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.10
+    - name: Set up Python ${{ matrix.version }}
       uses: actions/setup-python@v2
       with:
-        python-version: "3.10"
+        python-version: ${{ matrix.version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        pip install -r requirements.txt
+        pip install -r src/ch2/requirements.txt
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -31,4 +36,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test the application with mock data
       run: |
-        python sum_frequencies.py MOCK_DATA.json
+        python src/ch2/sum_frequency.py src/ch2/MOCK_DATA.json
