--- a/.github/workflows/ch2_challenge.yml
+++ b/.github/workflows/ch2_challenge.yml
@@ -7,11 +7,11 @@ jobs:
     strategy: 
       fail-fast: false
       matrix:
-        version: ["3.7", "3.8", "3.9", "3.10"]
+        version: ["3.8", "3.9", "3.10"]
         platform: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - platform: ubuntu-latest
-            version: 3.6
+            version: 3.7
         exclude:
           - platform: windows-latest
             version: 3.10
